--- a/views/index.ejs
+++ b/views/index.ejs
@@ -60,8 +60,7 @@
       <a href="/create" class="btn btn-outline-primary mt-4"
         ><i class="bx bxs-plus-circle bx-md"></i
       ></a>
-
-      <table>
+      <table class="table table-bordered table-striped text-center mt-4">
           <thead>
               <tr class="bg-primary text-white">
                   <th scope="col">ID</th>
@@ -71,14 +70,17 @@
               </tr>
           </thead>
           <tbody>
+              <% results.forEach((user)=> { %>
               <tr>
-                  <td>id</td>
-                  <td>user</td>
-                  <td>rol</td>
+                  <td><%= user.id %></td>
+                  <td><%= user.user %></td>
+                  <td><%= user.rol %></td>
                   <td>
-                      
+                      <a href="/edit" class="btn btn-outline-info">editar</a>
+                      <a href="/delete" class="btn btn-outline-danger">borrar</a>
                   </td>
               </tr>
+            <% }) %>
           </tbody>
 
       </table>
