--- a/views/index.ejs
+++ b/views/index.ejs
@@ -76,7 +76,7 @@
                   <td><%= user.user %></td>
                   <td><%= user.rol %></td>
                   <td>
-                      <a href="/edit" class="btn btn-outline-info">editar</a>
+                      <a href="/edit/<%= user.id %>" class="btn btn-outline-info">editar</a>
                       <a href="/delete" class="btn btn-outline-danger">borrar</a>
                   </td>
               </tr>
