--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -18,12 +18,12 @@
       href="https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css"
       rel="stylesheet"
     />
-    <title>CRUD - CREAR</title>
+    <title>CRUD - EDITAR </title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">CREAR</a>
+        <a class="navbar-brand" href="#">EDITAR</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -55,23 +55,24 @@
         </div>
       </div>
     </nav>
-    <% (user) { %>
 
+    <% if (user) { %>
     <div class="container mt-4">
         <div class="card border-secondary">
             <div class="card-header">Editar Registro</div>
             <div class="card-body">
-                <form action="/save" method="POST">
+                <form action="/save" method="POST"> 
+
                     <input id="id" name="id" value="<%= user.id %>" hidden>
-                <div class="mb-3"> 
+                <div class="mb-3">
                     <label for="user" class="form-label">Usuario</label>
                     <input type="text" class="form-control" id="user" name="user" value="<%= user.user %>" tabindex="1">
                 </div>
                 <div class="mb-3">
                     <label for="user"class="form-label">Rol</label>
                     <select id="rol" name="rol" class="form-select" tabindex="2">
-                        <option <%= user.rol=='admin' ? "selected" : ""%> value="admin" >Admin</option>
-                        <option <%= user.rol=='data entry' ? "selected" : ""%> value="data entry" >Data Entry</option>
+                        <option <%= user.rol=='admin' ? "selected" : "" %> value="admin" >Admin</option>
+                        <option <%= user.rol=='data entry' ? "selected" : "" %> value="data entry" >Data Entry</option>
                     </select>
                 </div>
                 <button type="submit" class="btn btn-primary" tabindex="5">Guardar</button>
@@ -80,14 +81,14 @@
             </div>
         </div>
     </div>
-
-    <% } %>
+      <% } %>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW"
       crossorigin="anonymous"
     ></script>
+
   </body>
 </html>
 
