--- a/views/create.ejs
+++ b/views/create.ejs
@@ -57,26 +57,34 @@
     </nav>
 
     <div class="container mt-4">
-        <div class="card border-secondary">
-            <div class="card-header">Nuevo Registro</div>
-            <div class="card-body">
-                <form action="/save" method="POST">
-                <div class="mb-3"> 
-                    <label for="user" class="form-label">Usuario</label>
-                    <input type="text" class="form-control" id="user" name="user" tabindex="1">
-                </div>
-                <div class="mb-3">
-                    <label for="user"class="form-label">Rol</label>
-                    <select id="rol" name="rol" class="form-select" tabindex="2">
-                        <option value="admin" selected>Admin</option>
-                        <option value="data entry">Data Entry</option>
-                    </select>
-                </div>
-                <button type="submit" class="btn btn-primary" tabindex="5">Guardar</button>
-                <a href="/" class="btn btn-secondary">Cancelar</a>
-                </form>
+      <div class="card border-secondary">
+        <div class="card-header">Nuevo Registro</div>
+        <div class="card-body">
+          <form action="/save" method="POST">
+            <div class="mb-3">
+              <label for="user" class="form-label">Usuario</label>
+              <input
+                type="text"
+                class="form-control"
+                id="user"
+                name="user"
+                tabindex="1"
+              />
             </div>
+            <div class="mb-3">
+              <label for="user" class="form-label">Rol</label>
+              <select id="rol" name="rol" class="form-select" tabindex="2">
+                <option value="admin" selected>Admin</option>
+                <option value="data entry">Data Entry</option>
+              </select>
+            </div>
+            <button type="submit" class="btn btn-primary" tabindex="5">
+              Guardar
+            </button>
+            <a href="/" class="btn btn-secondary">Cancelar</a>
+          </form>
         </div>
+      </div>
     </div>
 
     <script
@@ -86,4 +94,3 @@
     ></script>
   </body>
 </html>
-
