--- a/views/index.ejs
+++ b/views/index.ejs
@@ -77,7 +77,7 @@
                   <td><%= user.rol %></td>
                   <td>
                       <a href="/edit/<%= user.id %>" class="btn btn-outline-info">editar</a>
-                      <a href="/delete" class="btn btn-outline-danger">borrar</a>
+                      <a href="/delete/<%= user.id %>" class="btn btn-outline-danger">borrar</a>
                   </td>
               </tr>
             <% }) %>
